crates/config/tests/snapshots/block_string_folded_strip.snap
---
source: crates/config/tests/snapshots.rs
---
# block_string_folded_strip

## Input

```mical
text >-
  This is a long
  sentence split
  over lines.

```

## Json

```json
{
  "text": "This is a long sentence split over lines."
}
```

vim:ft=markdown
