crates/config/tests/snapshots/block_string_gen_folded_clip_tab_content_eof.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-gen-folded-clip-tab-content-eof

## Input

```mical
key >
  x	y
  	z

```

## JSON

```json
{
  "key": "x\ty \tz\n"
}
```

vim:ft=markdown
