crates/config/tests/snapshots/block_string_gen_folded_i2_clip_simple_dedent.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-gen-folded-i2-clip-simple-dedent

## Input

```mical
key >2
  a
  b
end marker

```

## JSON

```json
{
  "key": "a b\n",
  "end": "marker"
}
```

vim:ft=markdown
